# boost.mysql-issue

./: CMakeLists.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
